# sv2za

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cancel.rs  config.rs  lib.rs  main.rs  paths.rs  progress.rs  template.rs
src/backend/: anim_sync.rs  catalog.rs  copy_pm.rs  ensure.rs  flatc.rs  lookat.rs  mod.rs  names.rs  param_arrays.rs  patch_catalog.rs  personal.rs  za_base.rs
src/backend/textures/: bmp.rs  bntx.rs  index.rs  mod.rs
src/fb/: mod.rs  raw.rs  tracn.rs  tralk.rs  trpmcatalog.rs
src/ui/: app.rs  donors.rs  mod.rs
