[package]
name = "svza"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
tools = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
eframe = { version = "0.27", default-features = true }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.10"
walkdir = "2.5"

[[bin]]
name = "svza"
path = "src/main.rs"

[[bin]]
name = "catalog_inspect"
path = "src/bin/catalog_inspect.rs"
required-features = ["tools"]

[[bin]]
name = "tracr_dump"
path = "src/bin/tracr_dump.rs"
required-features = ["tools"]
